# termobulator

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  NOTICE  README.md  SECURITY.md  app_utils.cc  app_utils.h  dsl_interpreter.cc  dsl_interpreter.h  interactive_cli.cc  interactive_cli.h  lua_executor.cc  lua_executor.h  main.cc  mcp_server.cc  mcp_server.h  terminal_levels.h  termobulator.7  termobulator.cc  termobulator.h  termobulator_config.h.in  termobulator_testing.cc  termobulator_testing.h
.github/workflows/: ci.yml
inlined-doc/: mcp_instructions.md  terminal_levels.md
recipes/developer/: cpp_testing_api.md  visual_regression.md
recipes/incidental/: first_contact.md
scripts/: generate_headers.py
terminfo/: termobulator.ti
tests/: crash_test_dummy.cc  crash_test_dummy.h  crash_test_dummy_main.cc  crash_test_dummy_test.cc  integration_test.py  simulate_agent_discovery.py  target.sh  test_dsl.cc  test_lua.cc  test_mcp.py  test_recipes.cc  test_terminal.cc  test_testing_api.cc
